Project: integrate alfi 2025.2.1

--- a/scripts/hamster/cs/HamsterHello.csproj
+++ b/scripts/hamster/cs/HamsterHello.csproj
@@ -5,7 +5,7 @@
     <RootNamespace>Alfi.Hamster</RootNamespace>
     <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
   </PropertyGroup>
-  <Import Project="HamsterSimulatorLanguage/sandbox/HamsterSimulatorLanguage.sandbox.props" />
+  <Import Project="HamsterSimulatorLanguage/sandbox/HamsterSimulatorLanguage.sandbox.sources.props" />
 
   <ItemGroup>
     <Compile Include="HamsterSimulatorLanguage/sandbox/ActivityHelloPauleMain.cs" />
